--- a/server/views/install.ejs
+++ b/server/views/install.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shopify Node App</title>
+    <title>Chefclub App</title>
     <style>
       html, body { padding: 0; margin: 0; }
       body {
@@ -65,7 +65,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>Shopify Node App – Installation</h1>
+        <h1>Chefclub App – Installation</h1>
         <p class="subhead">
           <label for="shop">Enter your shop domain to log in or install this app.</label>
         </p>
