--- a/server/views/app.ejs
+++ b/server/views/app.ejs
@@ -10,6 +10,7 @@
 
     <script>
       window.apiKey = "<%= apiKey %>"
+      window.apiKey = "<%= accessToken %>"
       window.shopOrigin = "https://<%= shop %>"
 
       const shopifyAppConfig = {
