add accesstoken in the content table

--- a/server/views/app.ejs
+++ b/server/views/app.ejs
@@ -10,7 +10,7 @@
 
     <script>
       window.apiKey = "<%= apiKey %>"
-      window.apiKey = "<%= accessToken %>"
+      window.accessToken = "<%= accessToken %>"
       window.shopOrigin = "https://<%= shop %>"
 
       const shopifyAppConfig = {
