add accesstoken in the content table

--- a/server/views/app.ejs
+++ b/server/views/app.ejs
@@ -15,6 +15,7 @@
 
       const shopifyAppConfig = {
         apiKey: window.apiKey,
+        accessToken: window.accessToken,
         shopOrigin: window.shopOrigin,
       }
 
